InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyCreditSurcharge__c/vlocity_ins__PolicyCreditSurcharge__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Represents credits and surcharge fees associated with an insurance policy. Master-detail child object of Policy.</description>
    <label>Credit &amp; Surcharge</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits &amp; Surcharges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>