InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyCreditSurcharge__c/fields/vlocity_ins__Code__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Code__c</fullName>
    <label>Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>