InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyCreditSurcharge__c/fields/vlocity_ins__Factor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Factor__c</fullName>
    <label>Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>